--- a/versions/v2.12/modules/en/pages/about-rancher/architecture/rancher-server-and-components.adoc
+++ b/versions/v2.12/modules/en/pages/about-rancher/architecture/rancher-server-and-components.adoc
@@ -1,15 +1,15 @@
 = {rancher-product-name} Server and Components
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 
 The majority of Rancher 2.x software runs on the Rancher Server. Rancher Server includes all the software components used to manage the entire Rancher deployment.
 
-The figure below illustrates the high-level architecture of Rancher 2.x. The figure depicts a Rancher Server installation that manages two downstream Kubernetes clusters: one created by RKE and another created by Amazon EKS (Elastic Kubernetes Service).
+The diagram below illustrates the high-level architecture of Rancher 2.x. The figure depicts a Rancher Server installation that manages two downstream Kubernetes clusters: one created by RKE2 and another created by Amazon EKS (Elastic Kubernetes Service).
 
 For the best performance and security, we recommend a dedicated Kubernetes cluster for the Rancher management server. Running user workloads on this cluster is not advised. After deploying Rancher, you can xref:cluster-deployment/cluster-deployment.adoc[create or import clusters] for running your workloads.
 
-The diagram below shows how users can manipulate both xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher-launched Kubernetes] clusters and xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes] clusters through Rancher's authentication proxy:
+The diagram shows how users can manipulate both xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher-launched Kubernetes] clusters and xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes] clusters through Rancher's authentication proxy:
 
 .Managing Kubernetes Clusters through Rancher's Authentication Proxy
 image::rancher-architecture-rancher-api-server.svg[Architecture]
