--- a/versions/latest/modules/en/pages/observability/istio/disable-istio.adoc
+++ b/versions/latest/modules/en/pages/observability/istio/disable-istio.adoc
@@ -1,12 +1,12 @@
 = Disabling Istio
 :page-languages: [en, zh]
-:revdate: 2025-04-24
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 
 [WARNING]
 ====
-https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] will be deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
-Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement]
+https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] has been deprecated since Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
+Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
 This section describes how to uninstall Istio in a cluster or disable a namespace, or workload.
