--- a/versions/latest/modules/en/pages/observability/istio/guides/set-up-traffic-management.adoc
+++ b/versions/latest/modules/en/pages/observability/istio/guides/set-up-traffic-management.adoc
@@ -1,12 +1,12 @@
 = Set up Istio's Components for Traffic Management
 :page-languages: [en, zh]
-:revdate: 2025-04-24
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 
 [WARNING]
 ====
-https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] will be deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
-Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement]
+https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] has been deprecated since Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
+Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
 A central advantage of traffic management in Istio is that it allows dynamic request routing. Some common applications for dynamic request routing include canary deployments and blue/green deployments. The two key resources in Istio traffic management are _virtual services_ and _destination rules_.
