--- a/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
+++ b/versions/v2.12/modules/en/pages/cluster-admin/manage-clusters/projects-and-namespaces.adoc
@@ -1,6 +1,6 @@
 = Projects and Kubernetes Namespaces with {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-08-18
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 :description: Rancher Projects ease the administrative burden of your cluster and support multi-tenancy. Learn to create projects and divide projects into Kubernetes namespaces
 :experimental:
@@ -107,7 +107,7 @@ The `system` project:
 [NOTE]
 ====
 
-In RKE clusters where the project network isolation option is enabled, the `system` project overrides the project network isolation option so that it can communicate with other projects, collect logs, and check health.
+In RKE2/K3s clusters where the project network isolation option is enabled, the `system` project overrides the project network isolation option so that it can communicate with other projects, collect logs, and check health.
 ====
 
 
