--- a/versions/v2.12/modules/en/pages/observability/istio/configuration/project-network-isolation.adoc
+++ b/versions/v2.12/modules/en/pages/observability/istio/configuration/project-network-isolation.adoc
@@ -1,17 +1,17 @@
 = Additional Steps for Project Network Isolation
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 
 [WARNING]
 ====
-https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] will be deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
-Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement]
+https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] has been deprecated since Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
+Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
 In clusters where:
 
-* You are using the Canal network plugin with Rancher before v2.5.8, or you are using Rancher v2.5.8+ with an any RKE network plug-in that supports the enforcement of Kubernetes network policies, such as Canal or the Cisco ACI plugin
+* You are using Rancher v2.5.8+ with any RKE2 network plug-in that supports the enforcement of Kubernetes network policies, such as Canal
 * The Project Network Isolation option is enabled
 * You install the Istio Ingress module
 
