--- a/versions/v2.12/modules/en/pages/observability/istio/guides/enable-istio-in-namespace.adoc
+++ b/versions/v2.12/modules/en/pages/observability/istio/guides/enable-istio-in-namespace.adoc
@@ -1,12 +1,12 @@
 = Enable Istio in a Namespace
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 
 [WARNING]
 ====
-https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] will be deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
-Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement]
+https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] has been deprecated since Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
+Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement].
 ====
 
 You will need to manually enable Istio in each namespace that you want to be tracked or controlled by Istio. When Istio is enabled in a namespace, the Envoy sidecar proxy will be automatically injected into all new workloads that are deployed in the namespace.
