--- a/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
+++ b/versions/v2.12/modules/en/pages/security/compliance-scans/compliance-scans.adoc
@@ -1,6 +1,6 @@
 = Compliance Scans
 :page-languages: [en, zh]
-:revdate: 2025-08-26
+:revdate: 2025-10-01
 :page-revdate: {revdate}
 
 Rancher can run a security scan to check whether a cluster is deployed according to security best practices as defined in Kubernetes security benchmarks, such as the ones provided by STIG, BSI or CIS. The Compliance scans can run on any Kubernetes cluster, including hosted Kubernetes providers such as EKS, AKS, and GKE.
@@ -25,7 +25,7 @@ The Benchmark version is included in the generated report.
 
 The Benchmark provides recommendations of two types: Automated and Manual. Recommendations marked as Manual in the Benchmark are not included in the generated report.
 
-Some tests are designated as "Not Applicable." These tests will not be run on any CIS scan because of the way that Rancher provisions RKE clusters. For information on how test results can be audited, and why some tests are designated to be not applicable, refer to Rancher's xref:security/security-overview.adoc#_the_cis_benchmark_and_self_assessment[self-assessment guide] for the corresponding Kubernetes version.
+Some tests are designated as "Not Applicable." These tests will not be run on any CIS scan because of the way that Rancher provisions RKE2/K3s clusters. For information on how test results can be audited, and why some tests are designated to be not applicable, refer to Rancher's xref:security/security-overview.adoc#_the_cis_benchmark_and_self_assessment[self-assessment guide] for the corresponding Kubernetes version.
 
 The report contains the following information:
 
@@ -78,12 +78,6 @@ The following profiles are available:
 * Generic CIS 1.6
 * Generic CIS 1.20
 * Generic CIS 1.23
-* RKE permissive 1.6
-* RKE hardened 1.6
-* RKE permissive 1.20
-* RKE hardened 1.20
-* RKE permissive 1.23
-* RKE hardened 1.23
 * RKE2 permissive 1.6
 * RKE2 hardened 1.6
 * RKE2 permissive 1.20
@@ -102,11 +96,11 @@ The following profiles are available:
 
 You also have the ability to customize a profile by saving a set of tests to skip.
 
-All profiles will have a set of not applicable tests that will be skipped during the CIS scan. These tests are not applicable based on how a RKE cluster manages Kubernetes.
+All profiles will have a set of not applicable tests that will be skipped during the CIS scan. These tests are not applicable based on how a RKE2/K3s cluster manages Kubernetes.
 
-There are two types of RKE cluster scan profiles:
+There are two types of RKE2/K3s cluster scan profiles:
 
-* *Permissive:* This profile has a set of tests that have been will be skipped as these tests will fail on a default RKE Kubernetes cluster. Besides the list of skipped tests, the profile will also not run the not applicable tests.
+* *Permissive:* This profile has a set of tests that have been will be skipped as these tests will fail on a default RKE2/K3s Kubernetes cluster. Besides the list of skipped tests, the profile will also not run the not applicable tests.
 * *Hardened:* This profile will not skip any tests, except for the non-applicable tests.
 
 The EKS and GKE cluster scan profiles are based on CIS Benchmark versions that are specific to those types of clusters.
@@ -117,10 +111,9 @@ The default profile and the supported CIS benchmark version depends on the type 
 
 The `rancher-compliance` supports the CIS 1.9 Benchmark version.
 
-* For RKE Kubernetes clusters, the RKE Permissive 1.9 profile is the default.
-* EKS and GKE have their own CIS Benchmarks published by `kube-bench`. The corresponding test profiles are used by default for those clusters.
 * For RKE2 Kubernetes clusters, the RKE2 Permissive 1.9 profile is the default.
-* For cluster types other than RKE, RKE2, EKS and GKE, the Generic CIS 1.5 profile will be used by default.
+* EKS and GKE have their own CIS Benchmarks published by `kube-bench`. The corresponding test profiles are used by default for those clusters.
+* For cluster types other than RKE2, EKS and GKE, the Generic CIS 1.5 profile will be used by default.
 
 == About Skipped and Not Applicable Tests
 
