Update Linux Only section on Collect and Publish Images page with Prime URL

--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -5,6 +5,11 @@
 
 This section describes how to set up your private registry so that when you install Rancher, Rancher will pull all the required images from this registry.
 
+[IMPORTANT]
+====
+You can use any Rancher Prime version listed on the Prime Artifacts URL for the assets mentioned in these steps. To learn more about the Prime Artifacts URL, see our https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime-only documentation]. Authentication is required. Use your https://scc.suse.com/home[SUSE Customer Center (SCC)] credentials to log in.
+====
+
 By default, all images used to xref:cluster-deployment/cluster-deployment.adoc[provision Kubernetes clusters] or launch any tools in Rancher, e.g. monitoring, pipelines, alerts, are pulled from Docker Hub. In an air gapped installation of Rancher, you will need a private registry that is located somewhere accessible by your Rancher server. Then, you will load the registry with all the images.
 
 Populating the private registry with images is the same process for installing Rancher with Docker and for installing Rancher on a Kubernetes cluster.
@@ -42,8 +47,8 @@ If you will use ARM64 hosts, the registry must support manifests. As of April 20
 [pass]
 <h3><a id="_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
 
-. Go to our https://github.com/rancher/rancher/releases[releases page,] find the Rancher v2.x.x release that you want to install, and click *Assets*. Note: Don't use releases marked `rc` or `Pre-release`, as they are not stable for production environments.
-. From the release's *Assets* section, download the following files, which are required to install Rancher in an air gap environment:
+. Go to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime Artifacts URL] and find the Rancher v2.x.x release that you want to install, and click *expand*.
+. To install Rancher in an air-gapped environment, you must download the necessary files from the https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime Artifacts URL]:
 
 |===
 | Release File | Description
@@ -66,7 +71,6 @@ If you will use ARM64 hosts, the registry must support manifests. As of April 20
 ====
 Skip this step if you are using your own certificates, or if you are terminating TLS on an external load balancer.
 ====
-
 
 In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS certificates, you must add the https://artifacthub.io/packages/helm/cert-manager/cert-manager[`cert-manager`] image to `rancher-images.txt` as well.
 
@@ -175,7 +179,7 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 
 . Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments.
 . From the release's "Assets" section, download the following files:
-
++
 |===
 | Release File | Description
 
