Update Linux and Windows section on Collect and Publish Images page with Prime URL

--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -24,7 +24,6 @@ You must have a https://docs.docker.com/registry/deploying/#run-an-externally-ac
 If the registry has certs, follow https://rancher.com/docs/k3s/latest/en/installation/private-registry/[this K3s documentation] about adding a private registry. The certs and registry configuration files need to be mounted into the Rancher container.
 ====
 
-
 [tabs]
 ======
 Linux Only Clusters::
@@ -49,7 +48,7 @@ If you will use ARM64 hosts, the registry must support manifests. As of April 20
 
 . Go to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime Artifacts URL] and find the Rancher v2.x.x release that you want to install, and click *expand*.
 . To install Rancher in an air-gapped environment, you must download the necessary files from the https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime Artifacts URL]:
-
++
 |===
 | Release File | Description
 
@@ -177,8 +176,8 @@ Your registry must support manifests. As of April 2020, Amazon Elastic Container
 [pass]
 <h3><a id="_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
 
-. Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments.
-. From the release's "Assets" section, download the following files:
+. Go to the https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime Artifacts URL] and find the Rancher v2.x.x release that you want to install, and click *expand*.
+. To install Rancher in an air-gapped environment, you must download the necessary files from the https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime Artifacts URL]:
 +
 |===
 | Release File | Description
