Syncing with community PR #1940, updating rancher-on-arm64.adoc for latest/v2.12.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/rancher-admin/experimental-features/rancher-on-arm64.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/experimental-features/rancher-on-arm64.adoc
@@ -1,47 +1,21 @@
-= Running on ARM64 (Experimental)
+= Running on ARM64 Mixed Architecture (Experimental)
 :page-languages: [en, zh]
-:revdate: 2024-09-23
+:revdate: 2025-10-07
 :page-revdate: {revdate}
 
 [CAUTION]
 ====
-
-Running on an ARM64 platform is currently an experimental feature and is not yet officially supported in Rancher. Therefore, we do not recommend using ARM64 based nodes in a production environment.
+Running on an ARM64 mixed architecture platform is currently an experimental feature and is not yet officially supported in Rancher. Therefore, we do not recommend using ARM64 mixed architecture based nodes in a production environment.
 ====
-
 
 The following options are available when using an ARM64 platform:
 
-* Running Rancher on ARM64 based node(s)
- ** Only for Docker Install. Please note that the following installation command replaces the examples found in the xref:[Docker Install link]:
-
-+
-----
-# In the last line `rancher/rancher:vX.Y.Z`, be certain to replace "X.Y.Z" with a released version in which ARM64 builds exist. For  example, if your matching version is v2.5.8, you would fill in this line with `rancher/rancher:v2.5.8`.
-docker run -d --restart=unless-stopped \
-  -p 80:80 -p 443:443 \
-  --privileged \
-  rancher/rancher:vX.Y.Z
-----
-
-[NOTE]
-====
-
-To check if your specific released version is compatible with the ARM64 architecture, you may navigate to your
-version's release notes in the following two ways:
-
-* Manually find your version using https://github.com/rancher/rancher/releases.
-* Go directly to your version using the tag and the specific version number. If you plan to use v2.5.8, for example, you may navigate to https://github.com/rancher/rancher/releases/tag/v2.5.8.
-====
-
-
 * Create custom cluster and adding ARM64 based node(s)
  ** Kubernetes cluster version must be 1.12 or higher
- ** CNI Network Provider must be xref:faq/container-network-interface-providers.adoc#_flannel[Flannel]
 * Importing clusters that contain ARM64 based nodes
  ** Kubernetes cluster version must be 1.12 or higher
 
-Please see xref:cluster-deployment/configuration/rke1.adoc[Cluster Options] how to configure the cluster options.
+Depending on your cluster provisioning refer to xref:cluster-deployment/configuration/rke2.adoc[RKE2 cluster configuration options] or xref:cluster-deployment/configuration/k3s.adoc[K3s cluster configuration options] for more information.
 
 The following features are not tested:
 
