--- a/versions/v2.10/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
+++ b/versions/v2.10/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
@@ -1,6 +1,6 @@
 = Restoring {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2024-12-13
+:revdate: 2025-10-07
 :page-revdate: {revdate}
 :experimental:
 
@@ -18,6 +18,12 @@ Follow the instructions from this page when:
 While restoring Rancher on the same setup, the operator will scale down the Rancher deployment when restore starts, and it will scale back up the deployment once restore completes. Rancher will be unavailable during the restore.
 ====
 
+
+[NOTE]
+.Warning for Fleet users
+====
+You must consider how to handle Kubernetes API server availability and paused GitRepos when restoring a Rancher setup that is running Fleet workloads. See the https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/gitrepo-add.html#_backing_up_and_restoring[{fleet-product-name} documentation] for more details.
+:::
 
 [TIP]
 ====
