Apply changes to versions / zh docs

--- a/versions/v2.12/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-okta-saml.adoc
+++ b/versions/v2.12/modules/zh/pages/rancher-admin/users/authn-and-authz/configure-okta-saml.adoc
@@ -1,6 +1,6 @@
 = 配置 Okta (SAML)
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 
 如果你的组织使用 Okta Identity Provider (IdP) 进行用户身份验证，你可以通过配置 Rancher 来允许用户使用 IdP 凭证登录。
@@ -87,15 +87,13 @@ Rancher 会将你重定向到 IdP 登录页面。输入使用 Okta IdP 进行身
 [NOTE]
 .SAML 身份提供商注意事项
 ====
-
 如果你在没有 OpenLDAP 的情况下配置 Okta，你将无法搜索或直接查找用户或组。相关的警告如下：
 
 * 在 Rancher 中为用户和组分配权限时将不会验证用户和组。
 * 添加用户时，必须正确输入确切的用户 ID（即 `UID` 字段）。键入用户 ID 时，将不会搜索可能匹配的其他用户 ID。
 * 添加组时，必须从文本框旁边的下拉列表中选择组。Rancher 假定来自文本框的任何输入都是用户。
-* 用户组下拉列表仅显示你所属的用户组。如果你不是某个组的成员，你将无法添加该组。
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
-
 
 == Okta 与 OpenLDAP 搜索
 
