--- a/versions/v2.11/modules/en/pages/rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc
+++ b/versions/v2.11/modules/en/pages/rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc
@@ -1,6 +1,6 @@
 = Users and Groups
 :page-languages: [en, zh]
-:revdate: 2025-03-12
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 
 Rancher relies on users and groups to determine who is allowed to log in to Rancher and which resources they can access. When you configure an external authentication provider, users from that provider will be able to log in to your Rancher server. When a user logs in, the authentication provider will supply your Rancher server with a list of groups to which the user belongs.
@@ -14,15 +14,13 @@ When adding a user or group to a resource, you can search for users or groups by
 All users, whether they are local users or from an authentication provider, can be viewed and managed. In the upper left corner, click *☰ > Users & Authentication*. In the left navigation bar, click *Users*.
 
 [NOTE]
-.SAML Provider Caveats:
+.SAML Provider Caveats
 ====
-
-* SAML Protocol does not support search or lookup for users or groups. Therefore, there is no validation on users or groups when adding them to Rancher.
+* Users and groups aren't validated when you assign permissions to them in Rancher.
 * When adding users, the exact user IDs (i.e. `UID Field`) must be entered correctly. As you type the user ID, there will be no search for other  user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. You will not be able to add groups that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
-
 
 == User Information
 
