--- a/versions/v2.11/modules/zh/pages/rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc
+++ b/versions/v2.11/modules/zh/pages/rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc
@@ -1,6 +1,6 @@
 = 用户和组
 :page-languages: [en, zh]
-:revdate: 2025-03-12
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 
 Rancher 依赖用户和组来决定允许登录到 Rancher 的用户，以及他们可以访问哪些资源。你配置外部身份验证提供程序后，该提供程序的用户将能够登录到你的 Rancher Server。用户登录时，验证提供程序将向你的 Rancher Server 提供该用户所属的组列表。
@@ -16,13 +16,11 @@ Rancher 依赖用户和组来决定允许登录到 Rancher 的用户，以及他
 [NOTE]
 .SAML 身份提供商注意事项
 ====
-
-* SAML 协议不支持搜索或查找用户或组。因此，将用户或组添加到 Rancher 时不会对其进行验证。
+* Users and groups aren't validated when you assign permissions to them in Rancher.
 * 添加用户时，必须正确输入确切的用户 ID（即 `UID` 字段）。键入用户 ID 时，将不会搜索可能匹配的其他用户 ID。
 * 添加组时，必须从文本框旁边的下拉列表中选择组。Rancher 假定来自文本框的任何输入都是用户。
-* 用户组下拉列表仅显示你所属的用户组。如果你不是某个组的成员，你将无法添加该组。
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
-
 
 == 用户信息
 
