--- a/versions/v2.12/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/users/authn-and-authz/configure-keycloak-saml.adoc
@@ -1,6 +1,6 @@
 = Configure Keycloak (SAML)
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 :description: Create a Keycloak SAML client and configure Rancher to work with Keycloak. By the end your users will be able to sign into Rancher using their Keycloak logins
 
@@ -149,15 +149,13 @@ You may have to disable your popup blocker to see the IdP login page.
 *Result:* Rancher is configured to work with Keycloak. Your users can now sign into Rancher using their Keycloak logins.
 
 [NOTE]
-.SAML Provider Caveats:
+.SAML Provider Caveats
 ====
-
-* SAML Protocol does not support search or lookup for users or groups. Therefore, there is no validation on users or groups when adding them to Rancher.
+* Users and groups aren't validated when you assign permissions to them in Rancher.
 * When adding users, the exact user IDs (i.e. `UID Field`) must be entered correctly. As you type the user ID, there will be no search for other  user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. You will not be able to add groups that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
-
 
 == Configuration Reference
 
