--- a/versions/v2.12/modules/zh/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
+++ b/versions/v2.12/modules/zh/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
@@ -1,6 +1,6 @@
 = 配置 Microsoft AD FS (SAML)
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 
 如果你的组织使用 Active Directory Federation Service (AD FS) 进行用户身份认证，你可以通过配置 Rancher 来允许用户使用 AD FS 凭证登录。
@@ -27,12 +27,10 @@
 [NOTE]
 .SAML 身份提供商注意事项
 ====
-
-* SAML 协议不支持搜索或查找用户或组。因此，将用户或组添加到 Rancher 时不会对其进行验证。
+* Users and groups aren't validated when you assign permissions to them in Rancher.
 * 添加用户时，必须正确输入确切的用户 ID（即 `UID` 字段）。键入用户 ID 时，将不会搜索可能匹配的其他用户 ID。
 * 添加组时，必须从文本框旁边的下拉列表中选择组。Rancher 假定来自文本框的任何输入都是用户。
-* 用户组下拉列表仅显示你所属的用户组。如果你不是某个组的成员，你将无法添加该组。
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
-
 
 === xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc[后续操作：在 Microsoft AD FS 中配置 Rancher]
