--- a/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
+++ b/versions/v2.8/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/microsoft-ad-federation-service-saml.adoc
@@ -1,6 +1,6 @@
 = Configuring Microsoft Active Directory Federation Service (SAML)
 :page-languages: [en, zh]
-:revdate: 2024-09-26
+:revdate: 2025-09-18
 :page-revdate: {revdate}
 
 If your organization uses Microsoft Active Directory Federation Services (AD FS) for user authentication, you can configure Rancher to allow your users to log in using their AD FS credentials.
@@ -25,14 +25,12 @@ Setting up Microsoft AD FS with Rancher Server requires configuring AD FS on you
 * xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc[2. Configuring Rancher for Microsoft AD FS]
 
 [NOTE]
-.SAML Provider Caveats:
+.SAML Provider Caveats
 ====
-
-* SAML Protocol does not support search or lookup for users or groups. Therefore, there is no validation on users or groups when adding them to Rancher.
+* Users and groups aren't validated when you assign permissions to them in Rancher.
 * When adding users, the exact user IDs (i.e. `UID Field`) must be entered correctly. As you type the user ID, there will be no search for other  user IDs that may match.
 * When adding groups, you must select the group from the drop-down that is next to the text box. Rancher assumes that any input from the text box is a user.
-* The group drop-down shows only the groups that you are a member of. You will not be able to add groups that you are not a member of.
+* The group drop-down shows only the groups that you are a member of. However, if you have Administrator permissions or restricted Administrator permissions, you can join a group that you are not a member of.
 ====
-
 
 === xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc[Next: Configuring Microsoft AD FS for Rancher]
