Update revdate, fix wording / spacing

--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
@@ -1,27 +1,27 @@
 = 2. Collect and Publish Images to your Private Registry
 :page-languages: [en, zh]
-:revdate: 2024-09-27
+:revdate: 2025-10-09
 :page-revdate: {revdate}
 
-This section describes how to set up your private registry so that when you install Rancher, Rancher will pull all the required images from this registry.
+This page outlines steps to collect and publish container images to a private registry for an air-gapped installation of {rancher-product-name}.
 
 [IMPORTANT]
 ====
 You can use any Rancher Prime version listed on the Prime Artifacts URL for the assets mentioned in these steps. To learn more about the Prime Artifacts URL, see our https://scc.suse.com/rancher-docs/rancherprime/latest/en/reference-guide.html#prime-artifacts-url[Prime-only documentation]. Authentication is required. Use your https://scc.suse.com/home[SUSE Customer Center (SCC)] credentials to log in.
 ====
 
-By default, all images used to xref:cluster-deployment/cluster-deployment.adoc[provision Kubernetes clusters] or launch any tools in Rancher, e.g. monitoring, pipelines, alerts, are pulled from Docker Hub. In an air gapped installation of Rancher, you will need a private registry that is located somewhere accessible by your Rancher server. Then, you will load the registry with all the images.
+By default, all images used to xref:cluster-deployment/cluster-deployment.adoc[provision Kubernetes clusters] or launch any tools in Rancher, e.g. monitoring, pipelines, alerts, are pulled from Docker Hub. In an air gapped installation of Rancher, you need a private registry that is accessible by your Rancher server to load all the images.
 
 Populating the private registry with images is the same process for installing Rancher with Docker and for installing Rancher on a Kubernetes cluster.
 
-The steps in this section differ depending on whether or not you are planning to use Rancher to provision a downstream cluster with Windows nodes or not. By default, we provide the steps of how to populate your private registry assuming that Rancher will provision downstream Kubernetes clusters with only Linux nodes. But if you plan on provisioning any xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[downstream Kubernetes clusters using Windows nodes], there are separate instructions to support the images needed.
+The steps in this section differ depending on whether or not you are planning to use Rancher to provision a downstream cluster with Windows nodes or not. By default, we provide the steps of how to populate your private registry assuming that Rancher will provision downstream Kubernetes clusters with only Linux nodes. If you plan on provisioning any xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[downstream Kubernetes clusters using Windows nodes], there are separate instructions to support the images needed.
 
 [NOTE]
 .Prerequisites:
 ====
 You must have a https://docs.docker.com/registry/deploying/#run-an-externally-accessible-registry[private registry] available to use.
 
-If the registry has certs, follow https://rancher.com/docs/k3s/latest/en/installation/private-registry/[this K3s documentation] about adding a private registry. The certs and registry configuration files need to be mounted into the Rancher container.
+If the registry has certs, reference the https://documentation.suse.com/cloudnative/k3s/latest/en/installation/private-registry.html[K3s documentation] about adding a private registry. The certs and registry configuration files need to be mounted into the Rancher container.
 ====
 
 [tabs]
@@ -75,12 +75,10 @@ In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS
 
 . Fetch the latest `cert-manager` Helm chart and parse the template for image details:
 +
-
 [NOTE]
 ====
 Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
 ====
-
 +
 [,plain]
 ----
@@ -265,7 +263,6 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 [pass]
 <h3><a id="_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>
 
-
 . Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments. Click *Assets*.
 . From the release's *Assets* section, download the following files:
 
@@ -294,12 +291,10 @@ The workstation must have Docker 18.02+ in order to support manifests, which are
 
 . Fetch the latest `cert-manager` Helm chart and parse the template for image details:
 +
-
 [NOTE]
 ====
 Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
 ====
-
 +
 [,plain]
 ----
@@ -370,4 +365,3 @@ chmod +x rancher-load-images.sh
 ======
 
 == xref:./install-kubernetes.adoc[Next step for Kubernetes Installs - Launch a Kubernetes Cluster]
-
