Apply suggestions from code review
Co-authored-by: Lucas Saintarbor <lucas.saintarbor@suse.com>

--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/install-cluster-autoscaler/use-aws-ec2-auto-scaling-groups.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/install-cluster-autoscaler/use-aws-ec2-auto-scaling-groups.adoc
@@ -234,7 +234,7 @@ sudo docker run -d --privileged --restart=unless-stopped --net=host -v /etc/kube
   sudo docker run -d --privileged --restart=unless-stopped --net=host -v /etc/kubernetes:/etc/kubernetes -v /var/run:/var/run rancher/rancher-agent:<RANCHER_VERSION> --server https://<RANCHER_URL> --token <RANCHER_TOKEN> --ca-checksum <RANCHER_CA_CHECKCSUM> --address ${PUBLIC_IP} --internal-address ${PRIVATE_IP} ${K8S_ROLES}
 ----
 
-More info is at xref:cluster-deployment/set-up-cloud-providers/amazon.adoc[RKE2 clusters on AWS] and https://github.com/kubernetes/autoscaler/blob/master/cluster-autoscaler/cloudprovider/aws/README.md[Cluster Autoscaler on AWS.]
+More info is at xref:cluster-deployment/set-up-cloud-providers/amazon.adoc[RKE2 clusters on AWS] and https://github.com/kubernetes/autoscaler/blob/master/cluster-autoscaler/cloudprovider/aws/README.md[Cluster Autoscaler on AWS].
 
 === 3. Deploy Nodes
 
