--- a/versions/v2.8/modules/en/pages/faq/security.adoc
+++ b/versions/v2.8/modules/en/pages/faq/security.adoc
@@ -1,13 +1,9 @@
-'''
-
-title: Security FAQ
-
-'''
-
-== Is there a Hardening Guide?
+= Security FAQ
 :page-languages: [en, zh]
 :revdate: 2024-09-26
 :page-revdate: {revdate}
+
+== Is there a Hardening Guide?
 
 The Hardening Guide is located in the main xref:security/security-overview.adoc[Security] section.
 
