--- a/versions/v2.9/modules/zh/pages/faq/security.adoc
+++ b/versions/v2.9/modules/zh/pages/faq/security.adoc
@@ -1,14 +1,11 @@
-'''
-
-title: 安全
-
-'''
+= 安全
+:page-languages: [en, zh]
+:revdate: 2025-10-15
+:page-revdate: {revdate}
 
 *是否有强化指南？*
 
 强化指南现在位于xref:security/security-overview.adoc[安全]部分。
-
-{blank} +
 
 *Rancher Kubernetes 集群 CIS Benchmark 测试的结果是什么？*
 
