Syncing with Community PR #2031
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -1,9 +1,9 @@
 = 3. Install {rancher-product-name}
 :page-languages: [en, zh]
-:revdate: 2025-04-24
+:revdate: 2025-10-17
 :page-revdate: {revdate}
 
-Now that you have a running RKE cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.
+Now that you have a running RKE2/K3s cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.
 
 == Install the Helm CLI
 
