--- a/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -1,6 +1,6 @@
 = Port Requirements
 :page-languages: [en, zh]
-:revdate: 2025-06-20
+:revdate: 2025-10-17
 :page-revdate: {revdate}
 :description: Read about port requirements needed in order for Rancher to operate properly, both for Rancher nodes and downstream Kubernetes cluster nodes
 
@@ -16,7 +16,7 @@ The following table lists the ports that need to be open to and from nodes that 
 
 The port requirements differ based on the Rancher server architecture.
 
-Rancher can be installed on any Kubernetes cluster. For Rancher installs on a K3s, RKE, or RKE2 Kubernetes cluster, refer to the tabs below. For other Kubernetes distributions, refer to the distribution's documentation for the port requirements for cluster nodes.
+Rancher can be installed on any Kubernetes cluster. For Rancher installs on a K3s or RKE2 Kubernetes cluster, refer to the tabs below. For other Kubernetes distributions, refer to the distribution's documentation for the port requirements for cluster nodes.
 
 [NOTE]
 .Notes:
@@ -101,114 +101,6 @@ The following tables break down the port requirements for inbound and outbound t
 | 6443
 | Hosted/Imported Kubernetes API
 | Kubernetes API server
-|===
-======
-
-=== Ports for Rancher Server Nodes on RKE
-
-.Click to expand
-[%collapsible]
-======
-Typically Rancher is installed on three RKE nodes that all have the etcd, control plane and worker roles.
-
-The following tables break down the port requirements for traffic between the Rancher nodes:
-
-.Rules for traffic between Rancher nodes
-|===
-| Protocol | Port | Description
-
-| TCP
-| 443
-| Rancher agents
-
-| TCP
-| 2379
-| etcd client requests
-
-| TCP
-| 2380
-| etcd peer communication
-
-| TCP
-| 6443
-| Kubernetes apiserver
-
-| TCP
-| 8443
-| Nginx Ingress's Validating Webhook
-
-| UDP
-| 8472
-| Canal/Flannel VXLAN overlay networking
-
-| TCP
-| 9099
-| Canal/Flannel livenessProbe/readinessProbe
-
-| TCP
-| 10250
-| Metrics server communication with all nodes
-
-| TCP
-| 10254
-| Ingress controller livenessProbe/readinessProbe
-|===
-
-The following tables break down the port requirements for inbound and outbound traffic:
-
-.Inbound Rules for Rancher Nodes
-|===
-| Protocol | Port | Source | Description
-
-| TCP
-| 22
-| RKE CLI
-| SSH provisioning of node by RKE
-
-| TCP
-| 80
-| Load Balancer/Reverse Proxy
-| HTTP traffic to Rancher UI/API
-
-| TCP
-| 443
-| <ul><li>Load Balancer/Reverse Proxy</li><li>IPs of all cluster nodes and other API/UI clients</li></ul>
-| HTTPS traffic to Rancher UI/API
-
-| TCP
-| 6443
-| Kubernetes API clients
-| HTTPS traffic to Kubernetes API
-|===
-
-.Outbound Rules for Rancher Nodes
-|===
-| Protocol | Port | Destination | Description
-
-| TCP
-| 443
-| git.rancher.io
-| Rancher catalog
-
-| TCP
-| 22
-| Any node created using a node driver
-| SSH provisioning of node by node driver
-
-| TCP
-| 2376
-| Any node created using a node driver
-| Docker daemon TLS port used by node driver
-
-| TCP
-| 6443
-| Hosted/Imported Kubernetes API
-| Kubernetes API server
-
-| TCP
-| Provider dependent
-| Port of the Kubernetes API endpoint in hosted cluster
-| Kubernetes API
 |===
 ======
 
