--- a/versions/latest/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/requirements/requirements.adoc
@@ -1,8 +1,8 @@
 = Installation Requirements
 :page-languages: [en, zh]
-:revdate: 2025-08-20
+:revdate: 2025-10-17
 :page-revdate: {revdate}
-:description: Learn the node requirements for each node running Rancher server when you’re configuring  Rancher to run either in a Docker or Kubernetes setup
+:description: Learn the node requirements for each node running Rancher server when you’re configuring Rancher to run in a Kubernetes setup
 
 This page describes the software, hardware, and networking requirements for the nodes where the Rancher server will be installed. The Rancher server can be installed on a single node or a high-availability Kubernetes cluster.
 
@@ -34,8 +34,6 @@ All supported operating systems are 64-bit x86. Rancher should work with any mod
 
 The https://www.suse.com/suse-rancher/support-matrix/all-supported-versions[Rancher support matrix] lists which OS and Docker versions were tested for each Rancher version.
 
-Docker is required for nodes that will run RKE clusters. It is not required for RKE2 or K3s clusters.
-
 The `ntp` (Network Time Protocol) package should be installed. This prevents errors with certificate validation that can occur when the time is not synchronized between the client and server.
 
 Some distributions of Linux may have default firewall rules that block communication within the Kubernetes cluster. Since Kubernetes v1.19, firewalld must be turned off, because it conflicts with the Kubernetes networking plugins.
@@ -46,7 +44,7 @@ If you plan to run Rancher on ARM64, see xref:rancher-admin/experimental-feature
 
 === {rke2-product-name} Specific Requirements
 
-RKE2 bundles its own container runtime, containerd. Docker is not required for RKE2 installs.
+RKE2 bundles its own container runtime, containerd.
 
 For details on which OS versions were tested with RKE2, refer to the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions[Rancher support matrix].
 
@@ -59,12 +57,6 @@ Rancher needs to be installed on a supported Kubernetes version. To find out whi
 If you are installing Rancher on a K3s cluster with *Raspbian Buster*, follow https://rancher.com/docs/k3s/latest/en/advanced/#enabling-legacy-iptables-on-raspbian-buster[these steps] to switch to legacy iptables.
 
 If you are installing Rancher on a K3s cluster with Alpine Linux, follow https://rancher.com/docs/k3s/latest/en/advanced/#additional-preparation-for-alpine-linux-setup[these steps] for additional setup.
-
-=== RKE Specific Requirements
-
-RKE requires a Docker container runtime. Supported Docker versions are specified in the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/[Support Matrix] page.
-
-For more information, see xref:installation-and-upgrade/requirements/install-docker.adoc[Installing Docker].
 
 == Hardware Requirements
 
@@ -212,67 +204,13 @@ These requirements apply to hosted Kubernetes clusters such as Amazon Elastic Ku
 
 (*): Large deployments require that you xref:installation-and-upgrade/best-practices/tuning-rancher-at-scale.adoc[follow best practices] for adequate performance.
 
-=== RKE
-
-The following table lists minimum CPU and memory requirements for each node in the xref:installation-and-upgrade/install-rancher.adoc[upstream cluster].
-
-Please note that a highly available setup with at least three nodes is required for production.
-
-|===
-| Managed Infrastructure Size | Maximum Number of Clusters | Maximum Number of Nodes | vCPUs | RAM
-
-| Small
-| 150
-| 1500
-| 4
-| 16 GB
-
-| Medium
-| 300
-| 3000
-| 8
-| 32 GB
-
-| Large (*)
-| 500
-| 5000
-| 16
-| 64 GB
-|===
-
-(*): Large deployments require that you xref:installation-and-upgrade/best-practices/tuning-rancher-at-scale.adoc[follow best practices] for adequate performance.
-
-Refer to the RKE documentation for more detailed information on https://rke.docs.rancher.com/os[general requirements].
-
-=== Docker
-
-The following table lists minimum CPU and memory requirements for a xref:[single Docker node installation of Rancher].
-
-Please note that a Docker installation is only suitable for development or testing purposes and is not meant to be used in production environments.
-
-|===
-| Managed Infrastructure Size | Maximum Number of Clusters | Maximum Number of Nodes | vCPUs | RAM
-
-| Small
-| 5
-| 50
-| 1
-| 4 GB
-
-| Medium
-| 15
-| 200
-| 2
-| 8 GB
-|===
-
 == Ingress
 
 Each node in the Kubernetes cluster that Rancher is installed on should run an Ingress.
 
 The Ingress should be deployed as DaemonSet to ensure your load balancer can successfully route traffic to all nodes.
 
-For RKE, RKE2 and K3s installations, you don't have to install the Ingress manually because it is installed by default.
+For RKE2 and K3s installations, you don't have to install the Ingress manually because it is installed by default.
 
 For hosted Kubernetes clusters (EKS, GKE, AKS), you will need to set up the ingress.
 
@@ -310,7 +248,3 @@ If you use a load balancer, it should be be HTTP/2 compatible.
 To receive help from SUSE Support, Rancher Prime customers who use load balancers (or any other middleboxes such as firewalls), must use one that is HTTP/2 compatible.
 
 When HTTP/2 is not available, Rancher falls back to HTTP/1.1. However, since HTTP/2 offers improved web application performance, using HTTP/1.1 can create performance issues.
-
-== Dockershim Support
-
-For more information on Dockershim support, refer to xref:installation-and-upgrade/requirements/dockershim.adoc[this page].
