--- a/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/aws/node-template-configuration.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/infra-providers/aws/node-template-configuration.adoc
@@ -1,6 +1,6 @@
 = EC2 节点模板配置
 :page-languages: [en, zh]
-:revdate: 2025-03-17
+:revdate: 2025-10-17
 :page-revdate: {revdate}
 
 有关 EC2 和节点的更多详细信息，请参阅 https://aws.amazon.com/ec2[EC2 管理控制台]的官方文档。
@@ -35,7 +35,7 @@
 
 请参考xref:installation-and-upgrade/requirements/port-requirements.adoc#_rancher_aws_ec2_安全组[使用主机驱动时的 Amazon EC2 安全组]，了解 `rancher-nodes` 安全组中创建的规则。
 
-如果你自行为 EC2 实例提供安全组，Rancher 不会对其进行修改。因此，你需要让你的安全组允许 xref:installation-and-upgrade/requirements/port-requirements.adoc#_rke_上_rancher_server_节点的端口[Rancher 配置实例所需的端口]。有关使用安全组控制 EC2 实例的入站和出站流量的更多信息，请参阅link:https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html#WorkingWithSecurityGroups[这里]。
+如果你自行为 EC2 实例提供安全组，Rancher 不会对其进行修改。因此，你需要让你的安全组允许 xref:installation-and-upgrade/requirements/port-requirements.adoc#_rke2_上_rancher_server_节点的端口[Rancher 配置实例所需的端口]。有关使用安全组控制 EC2 实例的入站和出站流量的更多信息，请参阅link:https://docs.aws.amazon.com/vpc/latest/userguide/VPC_SecurityGroups.html#WorkingWithSecurityGroups[这里]。
 
 == 实例选项
 
