--- a/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
@@ -1,11 +1,11 @@
 = 离线 Helm CLI 安装
 :page-languages: [en, zh]
-:revdate: 2024-09-25
+:revdate: 2025-10-17
 :page-revdate: {revdate}
 
 本文介绍如何使用 Helm CLI 在离线环境中安装 Rancher Server。离线环境可以是 Rancher Server 离线安装、防火墙后面或代理后面。
 
-Rancher 安装在 RKE Kubernetes 集群、K3s Kubernetes 集群，或单个 Docker 容器上对应的安装步骤会有所不同。
+Rancher 安装在 K3s Kubernetes 集群，或单个 Docker 容器上对应的安装步骤会有所不同。
 
 如需了解各个安装方式的更多信息，请参见xref:installation-and-upgrade/installation-and-upgrade.adoc[本页]。
 
