--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
@@ -1,11 +1,11 @@
 = Air-Gapped Helm CLI Install
 :page-languages: [en, zh]
-:revdate: 2025-08-05
+:revdate: 2025-10-17
 :page-revdate: {revdate}
 
 This section is about using the Helm CLI to install the Rancher server in an air gapped environment. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.
 
-The installation steps differ depending on whether Rancher is installed on an RKE Kubernetes cluster, a K3s Kubernetes cluster, or a single Docker container.
+The installation steps differ depending on whether Rancher is installed on a K3s Kubernetes cluster or a single Docker container.
 
 For more information on each installation option, refer to xref:installation-and-upgrade/installation-and-upgrade.adoc[this page.]
 
