Add MCM build as part of version latest
* Add MCM playbook files.
* Add version yml files to versions/latest/antora-yml/.
* Add bin/switch-prod-comm from turtles-product-docs.
* Add conditionals to versions/latest/modules/en/nav.adoc as a PoC.

--- a/versions/latest/modules/en/nav.adoc
+++ b/versions/latest/modules/en/nav.adoc
@@ -9,6 +9,7 @@
 *** xref:about-rancher/architecture/rancher-server-and-components.adoc[]
 ** xref:about-rancher/concepts.adoc[]
 ** xref:about-rancher/glossary.adoc[]
+ifeval::["{build-type}" != "mcm"]
 * xref:installation-and-upgrade/installation-and-upgrade.adoc[Installation and Upgrades]
 ** xref:installation-and-upgrade/quick-start/quick-start.adoc[]
 *** xref:installation-and-upgrade/quick-start/deploy-rancher/deploy-rancher.adoc[]
@@ -82,8 +83,11 @@
 ** xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc[]
 *** xref:installation-and-upgrade/troubleshooting/certificate-troubleshooting.adoc[]
 *** xref:installation-and-upgrade/troubleshooting/rancher-ha.adoc[]
+endif::[]
 * xref:rancher-admin/rancher-admin.adoc[Rancher Administration]
+ifeval::["{build-type}" != "mcm"]
 ** xref:rancher-admin/scc-registration.adoc[]
+endif::[]
 ** User Management
 *** xref:rancher-admin/users/authn-and-authz/authn-and-authz.adoc[]
 **** xref:rancher-admin/users/authn-and-authz/manage-users-and-groups.adoc[]
@@ -120,6 +124,7 @@
 **** xref:rancher-admin/users/settings/manage-node-templates.adoc[]
 **** xref:rancher-admin/users/settings/user-preferences.adoc[]
 **** xref:rancher-admin/users/settings/manage-cloud-credentials.adoc[]
+ifeval::["{build-type}" != "mcm"]
 ** Global Configuration
 *** xref:rancher-admin/global-configuration/custom-branding.adoc[]
 *** xref:rancher-admin/global-configuration/notification-center.adoc[]
@@ -147,15 +152,18 @@
 **** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/restore.adoc[]
 *** xref:rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster.adoc[]
 *** xref:rancher-admin/back-up-restore-and-disaster-recovery/configuration/examples.adoc[]
+endif::[]
 ** CLI
 *** xref:rancher-admin/cli/kubectl.adoc[]
 *** xref:rancher-admin/cli/rancher-cli.adoc[]
+ifeval::["{build-type}" != "mcm"]
 ** xref:rancher-admin/experimental-features/experimental-features.adoc[]
 *** xref:rancher-admin/experimental-features/continuous-delivery.adoc[]
 *** xref:rancher-admin/experimental-features/cluster-role-aggregation.adoc[]
 *** xref:rancher-admin/experimental-features/istio-traffic-management-features.adoc[]
 *** xref:rancher-admin/experimental-features/rancher-on-arm64.adoc[]
 *** xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc[]
+endif::[]
 * xref:cluster-deployment/cluster-deployment.adoc[Cluster Deployment]
 ** xref:cluster-deployment/node-requirements.adoc[]
 ** xref:cluster-deployment/production-checklist/production-checklist.adoc[]
@@ -163,13 +171,17 @@
 *** xref:cluster-deployment/production-checklist/roles-for-nodes-in-kubernetes.adoc[]
 *** xref:cluster-deployment/production-checklist/tips-to-set-up-containers.adoc[]
 ** xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[]
+ifeval::["{build-type}" != "mcm"]
 *** xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/aks/configuration.adoc[]
+endif::[]
 *** xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/eks/configuration.adoc[]
+ifeval::["{build-type}" != "mcm"]
 *** xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/gke/configuration.adoc[]
 **** xref:cluster-deployment/hosted-kubernetes/gke/private-clusters.adoc[]
+endif::[]
 *** xref:cluster-deployment/hosted-kubernetes/sync-clusters.adoc[]
 ** xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[]
 *** xref:cluster-deployment/set-up-cloud-providers/amazon.adoc[]
@@ -307,6 +319,7 @@
 ** xref:security/secrets-hub.adoc[]
 ** xref:security/open-ports-with-firewalld.adoc[]
 ** xref:security/encrypting-http.adoc[]
+ifeval::["{build-type}" != "mcm"]
 * xref:integrations/integrations.adoc[Integrations]
 ** xref:integrations/kubernetes-distributions.adoc[]
 ** xref:integrations/rancher-extensions.adoc[]
@@ -327,6 +340,7 @@
 ** xref:integrations/rancher-desktop.adoc[]
 ** xref:integrations/cluster-api/cluster-api.adoc[]
 *** xref:integrations/cluster-api/overview.adoc[]
+endif::[]
 * Observability
 ** xref:observability/rancher-cluster-tools.adoc[]
 ** xref:observability/rancher-project-tools.adoc[]
