Syncing updates from Community PR2052
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/versions/v2.8/modules/zh/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -242,8 +242,10 @@ For instructions on cleaning nodes in RKE2 clusters that weren't deployed by Ran
 
 要删除 rancher-system-agent，请运行 https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] 脚本：
 
+[source,shell]
 ----
-curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
+sudo sh system-agent-uninstall.sh
 ----
 
 [#_删除_rke2]
@@ -271,8 +273,10 @@ K3s::
 
 要删除 rancher-system-agent，请运行 https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] 脚本：
 
+[source,shell]
 ----
-curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
+sudo sh system-agent-uninstall.sh
 ----
 
 [#_删除_k3s]
