--- a/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -173,8 +173,10 @@ For instructions on cleaning nodes in RKE2 clusters that weren't deployed by Ran
 
 要删除 rancher-system-agent，请运行 https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] 脚本：
 
+[source,shell]
 ----
-curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
+sudo sh system-agent-uninstall.sh
 ----
 
 [#_删除_rke2]
@@ -202,8 +204,10 @@ K3s::
 
 要删除 rancher-system-agent，请运行 https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] 脚本：
 
+[source,shell]
 ----
-curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
+sudo sh system-agent-uninstall.sh
 ----
 
 [#_删除_k3s]
