--- a/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/v2.8/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -241,8 +241,10 @@ You need to remove the following components from Rancher-provisioned RKE2 nodes:
 
 To remove the rancher-system-agent, run the https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] script:
 
+[source,shell]
 ----
-curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
+sudo sh system-agent-uninstall.sh
 ----
 
 [#_removing_rke2]
@@ -270,8 +272,10 @@ You need to remove the following components from Rancher-provisioned K3s nodes:
 
 To remove the rancher-system-agent, run the https://github.com/rancher/system-agent/blob/main/system-agent-uninstall.sh[system-agent-uninstall.sh] script:
 
+[source,shell]
 ----
-curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh | sudo sh
+curl https://raw.githubusercontent.com/rancher/system-agent/main/system-agent-uninstall.sh > system-agent-uninstall.sh
+sudo sh system-agent-uninstall.sh
 ----
 
 [#_removing_k3s]
